# resin

./: .gitattributes  .goreleaser.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  fsync.yml  init.py  release.sh  resin.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
docker/: dev.Dockerfile  prod.Dockerfile
src/: cli.rs  conf.rs  git.rs  inputs.rs  main.rs  utils.rs
