[package]
name = "resin"
version = "1.6.1"
description = "⚗️ Superfast CLI for the conventional commits commit format"
authors = ["Matt Gleich <email@mattglei.ch>"]
repository = "https://github.com/gleich/resin/"
homepage = "https://github.com/gleich/resin/"
license = "MPL-2.0"
edition = "2021"
keywords = ["cli", "commit", "git", "standardization"]

[dependencies]
anyhow = "1.0.96"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
colored = "3.0.0"
itertools = "0.14.0"
directories = "6.0.0"
configparser = "3.1.0"
clap = "4.5.30"
