[package]
name = "resin"
version = "1.6.3"
description = "Fast CLI for conventional commits"
authors = ["Matt Gleich <email@mattglei.ch>"]
repository = "https://github.com/gleich/resin/"
homepage = "https://github.com/gleich/resin/"
license = "MIT"
edition = "2021"
keywords = ["cli", "commit", "git", "standardization"]

[dependencies]
anyhow = "1.0.98"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
colored = "3.0.0"
itertools = "0.14.0"
directories = "6.0.0"
configparser = "3.1.0"
clap = "4.5.38"
