[package]
name = "resin"
version = "1.6.8"
description = "Fast CLI for conventional commits"
authors = ["Matt Gleich <email@mattglei.ch>"]
repository = "https://github.com/gleich/resin/"
homepage = "https://github.com/gleich/resin/"
license = "MIT"
edition = "2024"
keywords = ["cli", "commit", "git", "standardization"]

[dependencies]
anyhow = "1.0.101"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
colored = "3.1.1"
itertools = "0.14.0"
directories = "6.0.0"
configparser = "3.1.0"
clap = "4.5.57"
once_cell = "1.21.3"
